# QuSpin.rs

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md
.github/workflows/: bindings.yml  ci.yml  release.yml
bindings/: README.md
bindings/capi/: Cargo.toml
bindings/capi/src/: lib.rs
bindings/julia/: Project.toml
bindings/python/: pyproject.toml
bindings/python/compat_tests/quspin-1.0.1/: CAPABILITY_MATRIX.md  compat_status.json  manifest.json
bindings/python/src/qmbed/: __init__.py  _ffi.py  model.py
bindings/python/src/qmbed/compat/: __init__.py  quspin.py
bindings/python/src/quspin/: __init__.py
bindings/python/src/quspin/basis/: __init__.py
bindings/python/src/quspin/basis/transformations/: __init__.py
bindings/python/src/quspin/operators/: __init__.py  _make_hamiltonian.py
bindings/python/tests/: test_qmbed.py  test_upstream_quspin_compat.py
ci/: check_versions.py  freeze_upstream_quspin_tests.py  test_check_versions.py
examples/: archive_interop.rs
src/: archive.rs  backend.rs  block.rs  error.rs  interop.rs  lib.rs  runtime.rs
src/basis/: mod.rs
src/compat/: mod.rs
src/dynamics/: mod.rs
src/measure/: mod.rs
src/operator/: mod.rs
src/solve/: mod.rs
src/workflow/: mod.rs
tests/: archive_extensions.rs  block_extensions.rs  dynamics_extensions.rs  full_api_foundation.rs  general_tensor_wide_basis.rs  identity.rs  interop_model.rs  measurement_extensions.rs  native_api.rs  operator_extensions.rs  runtime.rs  runtime_symmetry.rs  scale_structure.rs  solver_extensions.rs  time_dependent_evolution.rs  visible_contract.rs  workflow_extensions.rs
(+2 files in other folders)
