[package]
name = "qmbed-capi"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
qmbed = { path = "../.." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
